--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "release": "rollup --config --environment NODE_ENV:production",
         "validate": "tsc --project tsconfig.json --noEmit",
         "run": "node ./test/index.js",
-        "test": "jest --selectProjects UNIT",
+        "test": "npm run build && jest --selectProjects UNIT",
         "test:update": "jest --selectProjects UNIT --updateSnapshot",
         "test:watch": "jest --selectProjects UNIT --watch",
         "test:coverage": "jest --selectProjects UNIT --coverage",
