--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -19,7 +19,7 @@ jobs:
       - name: "Checkout Code"
         uses: actions/checkout@v3
         with:
-          ref: master
+          ref: main
 
       - name: "Setup NodeJS Environment"
         uses: actions/setup-node@v3
