--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,29 +1,30 @@
-name: auto-merge
+name: 'Auto Merge Dependabot PRs'
 
-on: pull_request_target
-
-permissions:
-  pull-requests: write
-  contents: write
+on:
+  workflow_run:
+    types:
+      - completed
+    workflows:
+      - 'Push Checks'
 
 jobs:
-  dependabot:
+  merge:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    name: 'Auto Merge Dependabot PRs'
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
-      - name: Fetch Dependabot metadata
-        id: dependabot-metadata
-        uses: dependabot/fetch-metadata@v1
+      - name: 'Auto Merge Dependabot PRs'
+        uses: ridedott/merge-me-action@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Approve PR
-        run: gh pr review --approve "$PR_URL"
-        env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Merge PR
-        if: ${{ steps.dependabot-metadata.outputs.update-type != 'version-update:semver-major' }}
-        run: gh pr merge --auto --squash "$PR_URL"
-        env:
-          PR_URL: ${{ github.event.pull_request.html_url }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Depending on branch protection rules, a  manually populated
+          # `GITHUB_TOKEN_WORKAROUND` secret with permissions to push to
+          # a protected branch must be used. This secret can have an arbitrary
+          # name, as an example, this repository uses `DOTTBOTT_TOKEN`.
+          #
+          # When using a custom token, it is recommended to leave the following
+          # comment for other developers to be aware of the reasoning behind it:
+          #
+          # This must be used as GitHub Actions token does not support pushing
+          # to protected branches.
+          GITHUB_TOKEN: ${{ secrets.MERGE_ME_SECRET }}
+          PRESET: DEPENDABOT_MINOR
